# MedTech-BPA-1

./: pyproject.toml
medtech_bpa/: hooks.py
medtech_bpa/api_utils/: response.py
medtech_bpa/apiv1/: auth.py  customer.py  delivery_note.py  items.py  pick_list.py  purchase_receipt.py  quality_inspection.py  stock_entry.py  supplier.py
medtech_bpa/email_cron/: outstanding_invoice.py
medtech_bpa/fixtures/: client_script.json  custom_field.json  document_naming_rule.json  letter_head.json  print_format.json  print_settings.json  print_style.json  property_setter.json  role.json  server_script.json  translation.json  workflow.json  workflow_action_master.json  workflow_state.json
medtech_bpa/medtech_bpa/: utils.py
medtech_bpa/medtech_bpa/custom/: address.json  advance_taxes_and_charges.json  bom.json  bom_explosion_item.json  bom_item.json  company.json  customer.json  delivery_note.json  delivery_note_item.json  item.json  item_barcode.json  journal_entry.json  journal_entry_account.json  material_request.json  material_request_item.json  packed_item.json  pakaging_details.json  payment_entry.json  payment_entry_deduction.json  payment_entry_reference.json  payment_schedule.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_order_item.json  purchase_receipt.json  purchase_receipt_item.json  purchase_taxes_and_charges.json  quality_inspection.json  quality_inspection_reading.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_taxes_and_charges.json  sales_team.json  stock_entry.json  (+3 more)
(+109 files in other folders)
