
[project]
name = "medtech_bpa"
authors = [
    { name = "Indictrans", email = "contact@indictranstech.com"}
]
description = "Business Process Automation for MedTech"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pandas~=2.2.1",
    "numpy~=1.26.4",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.bench.frappe-dependencies]
#frappe = ">=15.10.0,<16.0.0"
